--- a/src/index.css
+++ b/src/index.css
@@ -658,57 +658,45 @@ ul.rpgui-dropdown-imp {
 	background-image: url('img/icons/weapons/swords/stone-saber.png');
 }
 
-.rpgui-icon.shield {
-	background-image: url('img/icons/shield.png');
-}
+/* inventory */
 .rpgui-icon.exclamation {
-	background-image: url('img/icons/exclamation.png');
-}
-.rpgui-icon.potion-red {
-	background-image: url('img/icons/potion-red.png');
-}
-.rpgui-icon.potion-green {
-	background-image: url('img/icons/potion-green.png');
-}
-
-.rpgui-icon.potion-blue {
-	background-image: url('img/icons/potion-blue.png');
+	background-image: url('img/icons/inventory/exclamation.png');
 }
 
 .rpgui-icon.weapon-slot {
-	background-image: url('img/icons/weapon-slot.png');
+	background-image: url('img/icons/inventory/weapon-slot.png');
 }
 
 .rpgui-icon.shield-slot {
-	background-image: url('img/icons/shield-slot.png');
+	background-image: url('img/icons/inventory/shield-slot.png');
 }
 
 .rpgui-icon.armor-slot {
-	background-image: url('img/icons/armor-slot.png');
+	background-image: url('img/icons/inventory/armor-slot.png');
 }
 
 .rpgui-icon.helmet-slot {
-	background-image: url('img/icons/helmet-slot.png');
+	background-image: url('img/icons/inventory/helmet-slot.png');
 }
 
 .rpgui-icon.ring-slot {
-	background-image: url('img/icons/ring-slot.png');
+	background-image: url('img/icons/inventory/ring-slot.png');
 }
 
 .rpgui-icon.potion-slot {
-	background-image: url('img/icons/potion-slot.png');
+	background-image: url('img/icons/inventory/potion-slot.png');
 }
 
 .rpgui-icon.magic-slot {
-	background-image: url('img/icons/magic-slot.png');
+	background-image: url('img/icons/inventory/magic-slot.png');
 }
 
 .rpgui-icon.shoes-slot {
-	background-image: url('img/icons/shoes-slot.png');
+	background-image: url('img/icons/inventory/shoes-slot.png');
 }
 
 .rpgui-icon.empty-slot {
-	background-image: url('img/icons/empty-slot.png');
+	background-image: url('img/icons/inventory/empty-slot.png');
 }
 
 /**
