--- a/src/index.css
+++ b/src/index.css
@@ -62,7 +62,7 @@ inside your html file.
 	overflow: hidden;
 	outline: none;
 	/* background */
-	background: url('img/button.png') no-repeat no-repeat;
+	background: url('img/ui/button.png') no-repeat no-repeat;
 	background-clip: padding-box;
 	background-origin: padding-box;
 	background-position: center;
@@ -82,13 +82,13 @@ inside your html file.
 /* button hover */
 .rpgui-button.hover,
 .rpgui-button:hover {
-	background-image: url('img/button-hover.png');
+	background-image: url('img/ui/button-hover.png');
 }
 
 /* button clicked */
 .rpgui-button.down,
 .rpgui-button:active {
-	background-image: url('img/button-down.png');
+	background-image: url('img/ui/button-down.png');
 }
 
 /* golden button stuff */
@@ -105,7 +105,7 @@ inside your html file.
 	overflow: hidden;
 	outline: none;
 	/* background */
-	background: url('img/button-golden.png') no-repeat no-repeat;
+	background: url('img/ui/button-golden.png') no-repeat no-repeat;
 	background-clip: padding-box;
 	background-origin: padding-box;
 	background-position: center;
@@ -125,12 +125,12 @@ inside your html file.
 /* button hover */
 .rpgui-button.golden.hover,
 .rpgui-button.golden:hover {
-	background-image: url('img/button-golden-hover.png');
+	background-image: url('img/ui/button-golden-hover.png');
 }
 
 button clicked .rpgui-button.golden.down,
 .rpgui-button.golden:active {
-	background-image: url('img/button-golden-down.png');
+	background-image: url('img/ui/button-golden-down.png');
 }
 
 .rpgui-button.golden:before {
@@ -140,7 +140,7 @@ button clicked .rpgui-button.golden.down,
 	width: 34px;
 	display: block;
 	height: 95%;
-	background: transparent url('img/button-golden-left.png') no-repeat right
+	background: transparent url('img/ui/button-golden-left.png') no-repeat right
 		center;
 	background-size: 100% 100%;
 	margin: 0 0 0 0;
@@ -156,7 +156,7 @@ button clicked .rpgui-button.golden.down,
 	content: '';
 	width: 34px;
 	height: 95%;
-	background: transparent url('img/button-golden-right.png') no-repeat left
+	background: transparent url('img/ui/button-golden-right.png') no-repeat left
 		center;
 	background-size: 100% 100%;
 	margin: 0 0 0 0;
@@ -175,7 +175,7 @@ button clicked .rpgui-button.golden.down,
 }
 
 .rpgui-content input[type='checkbox'].rpgui-checkbox + label {
-	background: url('img/checkbox-off.png') no-repeat;
+	background: url('img/ui/checkbox-off.png') no-repeat;
 	line-height: 24px;
 	display: inline-block;
 	background-size: auto 100%;
@@ -186,7 +186,7 @@ button clicked .rpgui-button.golden.down,
 }
 
 .rpgui-content input[type='checkbox'].rpgui-checkbox:checked + label {
-	background: url('img/checkbox-on.png') no-repeat;
+	background: url('img/ui/checkbox-on.png') no-repeat;
 	line-height: 24px;
 	display: inline-block;
 	background-size: auto 100%;
@@ -196,12 +196,12 @@ button clicked .rpgui-button.golden.down,
 
 /* golden checkbox */
 .rpgui-content input[type='checkbox'].rpgui-checkbox.golden + label {
-	background: url('img/checkbox-golden-off.png') no-repeat;
+	background: url('img/ui/checkbox-golden-off.png') no-repeat;
 	background-size: auto 100%;
 }
 
 .rpgui-content input[type='checkbox'].rpgui-checkbox.golden:checked + label {
-	background: url('img/checkbox-golden-on.png') no-repeat;
+	background: url('img/ui/checkbox-golden-on.png') no-repeat;
 	background-size: auto 100%;
 }
 
@@ -261,7 +261,7 @@ button clicked .rpgui-button.golden.down,
 .rpgui-container.framed {
 	/* border */
 	border-style: solid;
-	border-image-source: url('img/border-image.png');
+	border-image-source: url('img/ui/border-image.png');
 	border-image-repeat: repeat;
 	border-image-slice: 6 6 6 6;
 	border-image-width: 18px;
@@ -272,7 +272,7 @@ button clicked .rpgui-button.golden.down,
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	/* background */
-	background: url('img/background-image.png') repeat repeat;
+	background: url('img/ui/background-image.png') repeat repeat;
 	background-clip: padding-box;
 	background-origin: padding-box;
 	background-position: center;
@@ -282,7 +282,7 @@ button clicked .rpgui-button.golden.down,
 .rpgui-container.framed-golden {
 	/* border */
 	border-style: solid;
-	border-image-source: url('img/border-image-golden.png');
+	border-image-source: url('img/ui/border-image-golden.png');
 	border-image-repeat: repeat;
 	border-image-slice: 4 4 4 4;
 	border-image-width: 18px;
@@ -293,7 +293,7 @@ button clicked .rpgui-button.golden.down,
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	/* background */
-	background: url('img/background-image-golden.png') repeat repeat;
+	background: url('img/ui/background-image-golden.png') repeat repeat;
 	background-clip: padding-box;
 	background-origin: padding-box;
 	background-position: center;
@@ -303,7 +303,7 @@ button clicked .rpgui-button.golden.down,
 .rpgui-container.framed-golden-2 {
 	/* border */
 	border-style: solid;
-	border-image-source: url('img/border-image-golden2.png');
+	border-image-source: url('img/ui/border-image-golden2.png');
 	border-image-repeat: repeat;
 	border-image-slice: 8 8 8 8;
 	border-image-width: 18px;
@@ -314,7 +314,7 @@ button clicked .rpgui-button.golden.down,
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	/* background */
-	background: url('img/background-image-golden2.png') repeat repeat;
+	background: url('img/ui/background-image-golden2.png') repeat repeat;
 	background-clip: padding-box;
 	background-origin: padding-box;
 	background-position: center;
@@ -325,7 +325,7 @@ button clicked .rpgui-button.golden.down,
 	position: relative;
 	/* border */
 	border-style: solid;
-	border-image-source: url('img/border-image-grey.png');
+	border-image-source: url('img/ui/border-image-grey.png');
 	border-image-repeat: repeat;
 	border-image-slice: 3 3 3 3;
 	border-image-width: 7px;
@@ -336,7 +336,7 @@ button clicked .rpgui-button.golden.down,
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	/* background */
-	background: url('img/background-image-grey.png') repeat repeat;
+	background: url('img/ui/background-image-grey.png') repeat repeat;
 	background-clip: padding-box;
 	background-origin: padding-box;
 	background-position: center;
@@ -420,12 +420,12 @@ label {
 	/* border */
 	border-style: solid;
 	border-width: 7px 7px 7px 7px;
-	-moz-border-image: url('img/select-border-image.png') 10% repeat repeat;
-	-webkit-border-image: url('img/select-border-image.png') 10% repeat repeat;
-	-o-border-image: url('img/select-border-image.png') 10% repeat repeat;
-	border-image: url('img/select-border-image.png') 10% repeat repeat;
+	-moz-border-image: url('img/ui/select-border-image.png') 10% repeat repeat;
+	-webkit-border-image: url('img/ui/select-border-image.png') 10% repeat repeat;
+	-o-border-image: url('img/ui/select-border-image.png') 10% repeat repeat;
+	border-image: url('img/ui/select-border-image.png') 10% repeat repeat;
 	/* background */
-	background: url('img/select-background-image.png') repeat repeat;
+	background: url('img/ui/select-background-image.png') repeat repeat;
 	background-clip: padding-box;
 	background-origin: padding-box;
 	background-position: center;
@@ -460,7 +460,7 @@ ul.rpgui-dropdown-imp {
 	padding-bottom: 6px;
 	padding-left: 6px;
 	/* background */
-	background: url('img/select-background-image.png') repeat repeat;
+	background: url('img/ui/select-background-image.png') repeat repeat;
 	background-clip: padding-box;
 	background-origin: padding-box;
 	background-position: center;
@@ -484,7 +484,7 @@ ul.rpgui-dropdown-imp {
 	display: block;
 	border: 0px;
 	height: 10px;
-	background: url('img/hr.png') repeat-x top left;
+	background: url('img/ui/hr.png') repeat-x top left;
 }
 
 /* rpgui golden hr */
@@ -492,7 +492,7 @@ ul.rpgui-dropdown-imp {
 	display: block;
 	border: 0px;
 	height: 10px;
-	background: url('img/hr-golden.png') no-repeat top left;
+	background: url('img/ui/hr-golden.png') no-repeat top left;
 	background-size: 100% 100%;
 }
 
@@ -763,12 +763,12 @@ ul.rpgui-dropdown-imp {
 	/* border */
 	border-style: solid;
 	border-width: 7px 7px 7px 7px;
-	-moz-border-image: url('img/select-border-image.png') 10% repeat repeat;
-	-webkit-border-image: url('img/select-border-image.png') 10% repeat repeat;
-	-o-border-image: url('img/select-border-image.png') 10% repeat repeat;
-	border-image: url('img/select-border-image.png') 10% repeat repeat;
+	-moz-border-image: url('img/ui/select-border-image.png') 10% repeat repeat;
+	-webkit-border-image: url('img/ui/select-border-image.png') 10% repeat repeat;
+	-o-border-image: url('img/ui/select-border-image.png') 10% repeat repeat;
+	border-image: url('img/ui/select-border-image.png') 10% repeat repeat;
 	/* background */
-	background: url('img/select-background-image.png') repeat repeat;
+	background: url('img/ui/select-background-image.png') repeat repeat;
 	background-clip: padding-box;
 	background-origin: padding-box;
 	background-position: center;
@@ -794,7 +794,7 @@ ul.rpgui-list-imp {
 	padding-bottom: 6px;
 	padding-left: 6px;
 	/* background */
-	background: url('img/select-background-image.png') repeat repeat;
+	background: url('img/ui/select-background-image.png') repeat repeat;
 	background-clip: padding-box;
 	background-origin: padding-box;
 	background-position: center;
@@ -944,7 +944,7 @@ ul.rpgui-list-imp {
 	height: 42px;
 	width: 40px;
 	left: 0px;
-	background-image: url('img/progress-bar-left.png');
+	background-image: url('img/ui/progress-bar-left.png');
 	background-size: 100% 100%;
 }
 
@@ -954,7 +954,7 @@ ul.rpgui-list-imp {
 	height: 42px;
 	width: 40px;
 	right: 0px;
-	background-image: url('img/progress-bar-right.png');
+	background-image: url('img/ui/progress-bar-right.png');
 	background-size: 100% 100%;
 }
 
@@ -964,7 +964,7 @@ ul.rpgui-list-imp {
 	height: 42px;
 	left: 40px;
 	right: 40px;
-	background-image: url('img/progress-bar-track.png');
+	background-image: url('img/ui/progress-bar-track.png');
 	background-repeat: repeat-x;
 	background-size: 36px 100%;
 }
@@ -976,24 +976,24 @@ ul.rpgui-list-imp {
 	bottom: 8px;
 	left: 0;
 	width: 100%;
-	background-image: url('img/progress.png');
+	background-image: url('img/ui/progress.png');
 	background-repeat: repeat-x;
 	background-size: 36px 100%;
 }
 
 /* progress bar - blue color */
 .rpgui-progress-fill.blue {
-	background-image: url('img/progress-blue.png');
+	background-image: url('img/ui/progress-blue.png');
 }
 
 /* progress bar - green color */
 .rpgui-progress-fill.green {
-	background-image: url('img/progress-green.png');
+	background-image: url('img/ui/progress-green.png');
 }
 
 /* progress bar - red color */
 .rpgui-progress-fill.red {
-	background-image: url('img/progress-red.png');
+	background-image: url('img/ui/progress-red.png');
 }
 
 /**
@@ -1005,7 +1005,7 @@ ul.rpgui-list-imp {
 }
 
 .rpgui-content input[type='radio'].rpgui-radio + label {
-	background: url('img/radio-off.png') no-repeat;
+	background: url('img/ui/radio-off.png') no-repeat;
 	line-height: 24px;
 	display: inline-block;
 	background-size: auto 100%;
@@ -1016,7 +1016,7 @@ ul.rpgui-list-imp {
 }
 
 .rpgui-content input[type='radio'].rpgui-radio:checked + label {
-	background: url('img/radio-on.png') no-repeat;
+	background: url('img/ui/radio-on.png') no-repeat;
 	line-height: 24px;
 	display: inline-block;
 	background-size: auto 100%;
@@ -1026,12 +1026,12 @@ ul.rpgui-list-imp {
 
 /* golden radio */
 .rpgui-content .rpgui-radio.golden + label {
-	background: url('img/radio-golden-off.png') no-repeat !important;
+	background: url('img/ui/radio-golden-off.png') no-repeat !important;
 	background-size: auto 100% !important;
 }
 
 .rpgui-content .rpgui-radio.golden:checked + label {
-	background: url('img/radio-golden-on.png') no-repeat !important;
+	background: url('img/ui/radio-golden-on.png') no-repeat !important;
 	background-size: auto 100% !important;
 }
 
@@ -1047,7 +1047,7 @@ ul.rpgui-list-imp {
 /* Track */
 .rpgui-content ::-webkit-scrollbar-track,
 .rpgui-content::-webkit-scrollbar-track {
-	background-image: url('img/scrollbar-track.png');
+	background-image: url('img/ui/scrollbar-track.png');
 	background-size: 18px 60px;
 	background-repeat: repeat-y;
 }
@@ -1055,7 +1055,7 @@ ul.rpgui-list-imp {
 /* Handle */
 .rpgui-content ::-webkit-scrollbar-thumb,
 .rpgui-content::-webkit-scrollbar-thumb {
-	background-image: url('img/scrollbar-thumb.png');
+	background-image: url('img/ui/scrollbar-thumb.png');
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
 }
@@ -1063,7 +1063,7 @@ ul.rpgui-list-imp {
 /* buttons */
 .rpgui-content ::-webkit-scrollbar-button,
 .rpgui-content::-webkit-scrollbar-button {
-	background-image: url('img/scrollbar-button.png');
+	background-image: url('img/ui/scrollbar-button.png');
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
 }
@@ -1109,7 +1109,7 @@ ul.rpgui-list-imp {
 	height: 20px;
 	width: 20px;
 	left: 0px;
-	background-image: url('img/slider-left.png');
+	background-image: url('img/ui/slider-left.png');
 	background-size: 100% 100%;
 }
 
@@ -1119,7 +1119,7 @@ ul.rpgui-list-imp {
 	height: 20px;
 	width: 20px;
 	right: 0px;
-	background-image: url('img/slider-right.png');
+	background-image: url('img/ui/slider-right.png');
 	background-size: 100% 100%;
 }
 
@@ -1129,7 +1129,7 @@ ul.rpgui-list-imp {
 	height: 20px;
 	left: 0;
 	right: 0;
-	background-image: url('img/slider-track.png');
+	background-image: url('img/ui/slider-track.png');
 	background-repeat: repeat-x;
 	background-size: 24px 100%;
 }
@@ -1141,7 +1141,7 @@ ul.rpgui-list-imp {
 	width: 15px;
 	margin-top: -5px;
 	left: 40px;
-	background-image: url('img/slider-thumb.png');
+	background-image: url('img/ui/slider-thumb.png');
 	background-size: 100% 100%;
 }
 
@@ -1161,7 +1161,7 @@ ul.rpgui-list-imp {
 	height: 30px;
 	width: 30px;
 	left: 0px;
-	background-image: url('img/slider-left-golden.png');
+	background-image: url('img/ui/slider-left-golden.png');
 	background-size: 100% 100%;
 }
 
@@ -1171,7 +1171,7 @@ ul.rpgui-list-imp {
 	height: 30px;
 	width: 30px;
 	right: 0px;
-	background-image: url('img/slider-right-golden.png');
+	background-image: url('img/ui/slider-right-golden.png');
 	background-size: 100% 100%;
 }
 
@@ -1181,7 +1181,7 @@ ul.rpgui-list-imp {
 	height: 30px;
 	left: 0;
 	right: 0;
-	background-image: url('img/slider-track-golden.png');
+	background-image: url('img/ui/slider-track-golden.png');
 	background-repeat: repeat-x;
 	background-size: 40px 100%;
 }
@@ -1193,6 +1193,6 @@ ul.rpgui-list-imp {
 	width: 18px;
 	margin-top: -4px;
 	left: 40px;
-	background-image: url('img/slider-thumb-golden.png');
+	background-image: url('img/ui/slider-thumb-golden.png');
 	background-size: 100% 100%;
 }
