--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,11 @@ body {
 	min-height: 100vh;
 }
 
+.tooltip {
+	position: absolute;
+	z-index: 9999;
+}
+
 @media (prefers-color-scheme: light) {
 	:root {
 		color: #213547;
